--- a/app/src/Styles.css
+++ b/app/src/Styles.css
@@ -1,26 +1,24 @@
-:root {
-    --spacer: 2rem;
-}
-
-.login-btn {
-  background-color: #4ca7af; /* Green */
-  color: white;
-  border: none;
-}
-
-.signup-btn {
-  background-color: #f44336; /* Red */
-  color: white;
-  border: none;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+.py-6 {
+    padding-top: 4rem !important;
+    padding-bottom: 4rem !important;
   }
+  
+.py-7 {
+    padding-top: 5rem !important;
+    padding-bottom: 5rem !important;
+}
 
-.hero-padding {
-    padding-left: calc(var(--spacer, 1rem) * 0.5) !important;
-    padding-right: calc(var(--spacer, 1rem) * 0.5) !important;
+.py-8 {
+    padding-top: 6rem !important;
+    padding-bottom: 6rem !important;
+}
+
+.py-9 {
+    padding-top: 7rem !important;
+    padding-bottom: 7rem !important;
+}
+
+.py-10 {
+    padding-top: 8rem !important;
+    padding-bottom: 8rem !important;
 }
