--- a/app/src/components/UserProfile/UserProfile.css
+++ b/app/src/components/UserProfile/UserProfile.css
@@ -1,11 +1,12 @@
 .user-profile-container {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     width: 80%;
-    height: 80vh;
+    height: 30%;
     margin: 0 auto;
-    background-color: #f9f9f9;
+    margin-top: 20px;
+    background-color: #e6e6e6;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -16,7 +17,7 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    background-color: #ddd;
+    background-color: #ffffff;
     overflow: hidden;
     margin-right: 20px;
 }
