--- a/app/src/components/Dropdown/index.css
+++ b/app/src/components/Dropdown/index.css
@@ -11,6 +11,7 @@ body {
     top: 0;
     left: -100%;
     width: 30%;
+    min-width: 250px;
     height: 100%;
     background-color: #333;
     color: white;
@@ -62,9 +63,9 @@ li{
     transition: background-color 0.3s ease;
 }
 
-a{
+Link{
     color: white !important;
     text-decoration: none !important;
-    font-size: 30px;
+    font-size: 1.5em;
     font-weight: bold;
 }
